Remove LaTex output.

--- a/Documentation/html/main_8c.html
+++ b/Documentation/html/main_8c.html
@@ -124,7 +124,7 @@ Functions</h2></td></tr>
         </tr>
       </table>
 </div><div class="memdoc">
-<p>This function is the interrupt handler. </p><dl class="section author"><dt>Author</dt><dd>Brenton Salmi, KB1LQD </dd></dl>
+<p>This function is the interrupt handler for the Unified Clock System (UCS). It is only used if the clock(s) fail to initialize and fault, an infinite loop exists to "trap" the program counter. </p><dl class="section author"><dt>Author</dt><dd>Brenton Salmi, KB1LQD </dd></dl>
 <dl class="section return"><dt>Returns</dt><dd>Void </dd></dl>
 <dl class="section date"><dt>Date</dt><dd>2/8/2018 </dd></dl>
 
